# oatpp-mariadb

./: .env.example  .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  COMMON_ISSUES.md  CTestTestfile.cmake  Makefile  README.md  TODO.md  build.sh  cmake_install.cmake  commit_msg.txt  log  oatpp-mariadb-improvements  oatpp-mariadb.code-workspace  oatpp-mariadb.pc  oatpp-mariadb.pc.in  oatpp-mariadbConfig.cmake  redefinition of 'TestClient'```  run.sh  test_output.json
cmake/: module-install.cmake
docs/: CustomTypeImplementationGuide.md
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/oatpp-mariadb/: Connection.cpp  Connection.hpp  ConnectionPool.hpp  ConnectionProvider.cpp  ConnectionProvider.hpp  Executor.cpp  Executor.hpp  QueryResult.cpp  QueryResult.hpp  TransactionGuard.hpp  Types.hpp  orm.hpp
src/oatpp-mariadb/dto/: CountResult.hpp
src/oatpp-mariadb/mapping/: Deserializer.cpp  Deserializer.hpp  JsonHelper.hpp  ResultMapper.cpp  ResultMapper.hpp  Serializer.cpp  Serializer.hpp
src/oatpp-mariadb/mapping/type/: FlagMapping.hpp
src/oatpp-mariadb/ql_template/: Parser.cpp  Parser.hpp  TemplateValueProvider.cpp  TemplateValueProvider.hpp
src/oatpp-mariadb/types/: CommonTypes.hpp  Flag.cpp  Flag.hpp  MariaDBTypeWrapper.cpp  MariaDBTypeWrapper.hpp  SqlGenerator.hpp  Status.cpp  Status.hpp  TypeWrapper.hpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  TESTING_GUIDE.md  cmake_install.cmake
test/oatpp-mariadb/: QueryResultTest.cpp  QueryResultTest.hpp  tests.cpp
test/oatpp-mariadb/crud/: CrudTest.cpp  CrudTest.hpp  EnhancedCrudTest.cpp  EnhancedCrudTest.hpp  ProductCrudTest.cpp  ProductCrudTest.hpp
test/oatpp-mariadb/migration/: SchemaVersionTest.cpp  SchemaVersionTest.hpp
test/oatpp-mariadb/ql_template/: ParserTest.cpp  ParserTest.hpp
test/oatpp-mariadb/transaction/: TransactionTest.cpp  TransactionTest.hpp
test/oatpp-mariadb/types/: AnyTypeTest.hpp  BinaryTest.cpp  BinaryTest.hpp  BooleanTest.cpp  BooleanTest.hpp  CustomTypeTest.cpp  CustomTypeTest.hpp  DateTest.cpp  DateTest.hpp  DateTimeTest.cpp  DateTimeTest.hpp  EnumTest.cpp  EnumTest.hpp  FlagTest.cpp  FlagTest.hpp  Float64Test.cpp  Float64Test.hpp  Int32Test.cpp  Int32Test.hpp  Int64Test.cpp  Int64Test.hpp  JsonTest.cpp  JsonTest.hpp  MariaDBTypeWrapperTest.cpp  MariaDBTypeWrapperTest.hpp  NumericTest.cpp  NumericTest.hpp  ReturningTest.cpp  ReturningTest.hpp  SetTest.cpp  SetTest.hpp  StatusTest.cpp  StatusTest.hpp  StringTest.cpp  StringTest.hpp  TimeTest.cpp  TimeTest.hpp  TypeMappingTest.cpp  TypeMappingTest.hpp  TypeWrapperTest.cpp  (+7 more)
test/oatpp-mariadb/utils/: EnvLoader.hpp
tmp/build-debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tmp/build-debug/src/: Makefile  cmake_install.cmake
tmp/build-debug/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  oatpp-mariadb-tests
tmp/build-release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tmp/build-release/src/: Makefile  cmake_install.cmake
tmp/build-release/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  oatpp-mariadb-tests
